exception handler class added